@@ -8,6 +8,8 @@ Version 6.0.5 - not yet released
   - FLARM: parse PGRMZ as altitude above 1013.25 hPa
 * user interface
   - scale the "Today Screen" buttons on large screens
+* map
+  - terrain: permanently disable failed tiles
 * Android
   - fix bitmap loading on Samsung Galaxy Tab
   - show Bluetooth device names in configuration dialog
